# ExteriorLightSystem

./: .env  .gitignore  README.md  docker-compose.yml  docker-compose_up.yml  run-multi.sh  run-single.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: test.yaml
ExteriorLightController/: .dockerignore  Dockerfile  platformio.ini  server2.py
ExteriorLightController/entrypoints/: docker-entrypoint.sh
ExteriorLightController/src/src/custom_msg/: CMakeLists.txt  package.xml
ExteriorLightController/src/src/custom_msg/msg/: CustomMsg.msg
ExteriorLightController/src/src/pubsub/: CMakeLists.txt
ExteriorLightController/src/src/pubsub/src/app/: ExteriorLightController.c  ExteriorLightController.h  adc.c  adc.h  calc_v.c  calc_v.h  pina.h
ExteriorLightController/src/src/pubsub/src/main/: main.cpp
ExteriorLightController/src/src/pubsub/src/mclient/core/: mclient.c
ExteriorLightController/src/src/pubsub/src/mclient/user/: mclient_callout.c  mclient_callout.h  mmap.c  mmap.h
ExteriorLightController/src/src/pubsub/src/ros2/: main.cpp  ros_task.cpp  ros_task.hpp
ExteriorLightController/src/src/pubsub/src/stub/: Arduino.c
FrontSpotLights/: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile_fast  launch.json  make-testenv.sh  platformio.ini  view-vcd.sh
FrontSpotLights/entrypoints/: docker-entrypoint.sh  docker-entrypoint_fast.sh
FrontSpotLights/src/src/pubsub/: CMakeLists.txt  package.xml
FrontSpotLights/src/src/pubsub/src/app/: CMakeLists.txt  FrontSpotLights.c  FrontSpotLights.h  pina.h
FrontSpotLights/src/src/pubsub/src/main/: main.cpp
FrontSpotLights/src/src/pubsub/src/mclient/core/: mclient.c
FrontSpotLights/src/src/pubsub/src/mclient/user/: mclient.h  mclient_callout.c  mclient_callout.h  mmap.c  mmap.h
FrontSpotLights/src/src/pubsub/src/ros2/: main.cpp  ros_task.cpp  ros_task.hpp
FrontSpotLights/src/src/pubsub/src/stub/: Arduino.h
FrontSpotLights/test/testsuites/CheckLightSensor/d_CheckLightSensor/Data/: d_mmap_manu.json
FrontSpotLights/test/testsuites/CheckLightSensor/s_CheckLightSensor/Scripts/: s_lib_sils_manu.py
Timeseries2VCDMakerInput/: LICENSE  README.md
Timeseries2VCDMakerInput/csvConv/src/: csvConv.py
Timeseries2VCDMakerInput/mysample/: simout.xml
robot/: Dockerfile
robot/entrypoints/: docker-entrypoint.sh
robot/result/SILS/reslt_CheckLightSensor/: make_testsuite.py
robot/testware_lib/d_CheckLightSensor/Data/: d_get_light_status.json  d_init_testing_env.json  d_mmap.json  d_mmap_manu.json  d_set_env_light.json  d_set_ig_stat.json
robot/testware_lib/s_CheckLightSensor/Scripts/: __init__.robot  s_keywords.robot  s_lib.py  s_lib_hils.py  s_lib_sils.py  s_lib_sils_manu.py
robot/testware_lib/s_CheckLightSensor/Scripts/ready/: s_lib_sils.py
robot/testware_lib/t_CheckLightSensor/Scripts/: t_CheckLightSensor.robot
robot/testware_lib/t_CheckLightSensor2/Scripts/: t_CheckLightSensor2.robot
