<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pubsub</name>
  <version>0.1.0</version>
  <description>Ros_Task</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>rclc</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>custom_msg</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>rclc</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>custom_msg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
